--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,14 +2,15 @@
 ttrss_common_data:
   packages:
     - php-fpm
-    - php7.0-cli
-    - php7.0-curl
-    - php7.0-mbstring
-    - php7.0-json
-    - php7.0-gd
-    - php7.0-pgsql
-    - php7.0-xml
-    - php7.0-opcache
+    - php7.2-cli
+    - php7.2-curl
+    - php7.2-mbstring
+    - php7.2-json
+    - php7.2-gd
+    - php7.2-pgsql
+    - php7.2-xml
+    - php7.2-opcache
+    - python3-pymysql
   mysql_database: ttrss
   mysql_root_password: password
   mysql_ttrss_user: ttrss
