Add packages and ensure dirs permissions
mysql package for php has to be installed to allow ttrss talk with
mysql.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,8 @@ ttrss_common_data:
     - php7.2-pgsql
     - php7.2-xml
     - php7.2-opcache
+    - php7.2-mysql
+    - php7.2-intl
     - python3-pymysql
   mysql_database: ttrss
   mysql_root_password: password
